# ulysses-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  push_script.sh
In-Pocket/: Documentation.docx  InPocket.py  gfn2xtb_in_pocket_opt.cpp
In-Pocket/Test/: interaction_energies.csv
examples/: 1iep_ligand.xyz  MD.cpp  MD_threonine.out  README.docx  adenine.xyz  adenine0.xyz  adenine0_opt.xyz  adenine_opt.xyz  adenine_opt_opt.xyz  dna.xyz  gfn2-xtb_opt_lib.cpp  gfn2-xtb_optg.cpp  gfn2-xtb_optg_adenine.out  gfn2-xtb_spe.cpp  gfn2-xtb_spe_adenine.out  gfn2-xtb_spe_lib.cpp  glutathione.xyz  log  log1  main.cpp  naphthalene.xyz  naphthalene_opt.xyz  naphthalene_opt0.mol2  naphthalene_opt0.xyz  naphthalene_opt00.xyz  performance.sh  pm6-corrected.cpp  pm6-corrected_glutathione.out  pm6-d3h4x_opt.cpp  pm6-d3h4x_opt_naphthalene.out  script.sh  sqm.in  sqm.out  tbuoh.xyz  test.mol2  thermo.cpp  thermo_tbuoh.out  threonine.xyz  water.mol2  water.xyz  (+6 more)
examples/MD/: geometry0.xyz  geometry1.xyz  geometry10.xyz  geometry2.xyz  geometry3.xyz  geometry4.xyz  geometry5.xyz  geometry6.xyz  geometry7.xyz  geometry8.xyz  geometry9.xyz  trajectory.trj
lib/: CMakeLists.txt  gfn2-xtb_opt_lib.cpp  gfn2-xtb_spe_lib.cpp
programs/: CMakeLists.txt  GFN-MTD.cpp  GFN2program.cpp  main2.cpp  runGFN2.py  runGFN2MTD.py
src/: BSet.hpp  Boltzmann.hpp  ConstantsPackage.hpp  Density.hpp  GFN.hpp  Gas.hpp  Geometry.hpp  Global.hpp  Hessian.hpp  Intermolecular.hpp  KineticsPackage.hpp  MNDO.hpp  MNDOd.hpp  Method.hpp  MolecularDynamics.hpp  Molecule.hpp  PES.hpp  Potentials.hpp  QC.hpp  Rotations.hpp  Solid.hpp  Translations.hpp  UnitConversion.hpp  Vibrations.hpp
src/atoms/: AtomPackage.hpp  ChargePackage.hpp  IPPackage.hpp  IsotopeWeightPackage.hpp
src/basissets/: 1CenterOvSTO.hpp  2CenterOvGTO.hpp  2CenterOvSTO.hpp  2ElectronDewar.hpp  OrbitalNumeration.hpp  OvFunctions.hpp  OvRot.hpp  STO.hpp  burns.hpp  dewar.hpp  gfn2.hpp  pople.hpp  slater.hpp
src/math/: ConvergenceAccelaration.hpp  FunctionPackage.hpp  GaussianPackage.hpp  IntegralPackage.hpp  MatrixPackage.hpp  NumericIntegrationPackage.hpp  RandomPackage.hpp  SearchPackage.hpp  SolverPackage.hpp  SpecialFunctionPackage.hpp  SummationPackage.hpp  TensorPackage.hpp  VectorPackage.hpp
(+124 files in other folders)
